# hone-a-drone

./: .gitignore  BLOG-DRAFT.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  STACK.md  disclosure.md  grader.sh  launch_gepa_baseline.sh  launch_singleshot_baseline.sh  pyproject.toml  run_gepa_baseline.py  run_parallel.py  run_rollout.py  run_singleshot_baseline.py  scheduler.json
controllers/: planner.py  planner.py.best.md
controllers.v2-honed/: planner.py
controllers.v2rerun-honed/: attitude_ctrl.py  planner.py  world_model.py
controllers.v2rerun-oc-observer-honed/: attitude_ctrl.py  planner.py
controllers.v2rerun-opencode-honed/: attitude_ctrl.py  baseline.py  planner.py
memory/: state.md
posts/: 2026-05-04-hone-v2-vs-autoresearch-thread.md  2026-05-04-hone-v2-vs-autoresearch.md
runs-aborted-run1/: 20260420T082857.csv  20260420T082913.csv  20260420T082918.csv  20260420T082923.csv  20260420T082928.csv  20260420T082933.csv  20260420T082939.csv  20260420T082944.csv  20260420T083001.csv  20260420T083012.csv  20260420T083018.csv  20260420T083023.csv  20260420T083215.csv  20260420T083219.csv  20260420T083224.csv  20260420T083242.csv  20260420T083314.csv  20260420T083333.csv  20260420T083347.csv  20260420T083401.csv  20260420T083414.csv  20260420T084110.csv  20260420T084122.csv  20260420T084134.csv  20260420T084146.csv  20260420T084255.csv  20260420T084300.csv  20260420T084304.csv  20260420T084316.csv  20260420T084329.csv  20260420T084341.csv  20260420T084458.csv  20260420T084503.csv  20260420T084508.csv  20260420T084520.csv  20260420T084532.csv  (+31 more)
(+514 files in other folders)
