[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hone-a-drone"
version = "0.1.0"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "scipy",
  "toppra",
  "gymnasium",
]

[project.optional-dependencies]
perception = [
  "torch>=2.2",
  "torchvision",
]
mpc = [
  "acados-template",
]
